Refactor cell coloring implementation